2012-01-10  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (External Macro Processors,
	#line Directive,
	#line and TeX,
	#line Syntax Details): new nodes.

	Also, use http://ftp.gnu.org in examples per sysadmin recommendation.

2012-01-08  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Internationalization): move to above Conditionals,
	so set clear value and Defining New Texinfo Commands are next
	to each other.

2012-01-07  Karl Berry  <karl@gnu.org>

	* util/texi2dvi: do not use && and || as line continuations,
	cute as it is.  Use -v also when debugging.

2012-01-06  Patrice Dumas  <pertusus@free.fr>

	* util/texinfo.dtd: adapt raw block commands content to what can
	really be in those commands.
	Add inlineraw, inlinefmt.
	Better handling of commands defined with @definfoenclose and
	errormsg.

2012-01-03  Karl Berry  <karl@gnu.org>

	* NEWS: new command @hashchar{}.
	* doc/texinfo.txi (Inserting Special Characters): rename node again.
	(Inserting a Hashsign),
	(External Macro Processors): new node.
	* doc/refcard/txirefcard.tex: document it.
        * doc/texinfo.tex (@hashchar): output a #.
        * util/texinfo.dtd: add entity.

2011-12-31  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi,
	* doc/tefcard/txirefcard.tex,
	* install-info/install-info.c,
	* info/info.c,
	* info/infokey.c,
	* util/texindex.c,
	* util/texi2dvi,
	* util/gendocs_template,
	* util/gendocs_template_min: 2012.

2011-12-30  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Marking): make the @chapter title be
	Making Text, ...
	(Command List): xref punctuation warning.

2011-12-28  Karl Berry  <karl@gnu.org>

	* util/htmlxref.cnf (GDBM, mailutils, readline): new entries
	from Sergey.

2011-12-27  Sergey Poznyakoff  <gray@gnu.org.ua>

	Bugfixes.
	
	* info/echo-area.c (info_read_completing_internal): Initialize
	window line map before the loop, otherwise the previous contents
	is used to compute cursor position.
	* info/indices.c (info_virtual_index): Report and return